<resources>
    <string name="app_name">BCA MobiIe</string>
    <string name="title_home">Home</string>
    <string name="title_akunsaya">Akun Saya</string>
    <string name="title_notifications">Notifikasi</string>
    <string name="title_transaksi">Transaksi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copyright_content_wording_text">\n<b>BCA</b> All Rights Reserved.</string>
    <string name="copyright_content_wording_text2">To deactivate your BCA mobile account or for further information, please contact Halo BCA 1500888.\n\n</string>
    <string name="version_about"><b>Version</b></string>
    <string name="version_about2">4.2.4 (1222)</string>
    <string name="copyright_c_label_text">Copyright © 2022</string>
    <string name="terms_of_service_text"><u>Terms of service</u></string>
    <string name="about">About</string>
    <string name="nfc_request_active_text">Aktifkan fitur NFC pada\nponsel Anda.</string>
    <string name="title_mybca_pemrek_popup">Yuk, coba pengalaman baru buka rekening &amp; bertransaksi di aplikasi myBCA!</string>
    <string name="body_mybca_pemrek_popup_google">Dengan menekan tombol di bawah, Anda akan diarahkan ke Play Store</string>
    <string name="title_menu_1">Buka rekening dari handphone tanpa minimum setoran awal</string>
    <string name="title_menu_2">Langsung dapat fasilitas mobile dan internet banking</string>
    <string name="title_menu_3">Mudah setor dan tarik tunai dengan fitur Cardless di mobile banking</string>
    <string name="title_menu_4">Praktis bayar belanja dengan QR di merchant berlogo QRIS</string>
    <string name="text_newrek_nabung_kini">Nabung kini lebih mudah,\ncukup ikuti langkah berikut</string>
    <string name="siapkan_ktp">Siapkan KTP-el, NPWP (jika ada), lalu isi data diri</string>
    <string name="do_verif_data">Lakukan Video Call dengan Customer Service BCA untuk verifikasi data</string>
    <string name="do_active_internet"><![CDATA[Aktifkan mobile & internet banking untuk kemudahan transaksi]]></string>
    <string name="do_setoran">Lakukan setoran awal ke rekening baru</string>
    <string name="aktifkan_layanan_lokasi">Aktifkan Layanan Lokasi</string>
    <string name="do_active_gps">Untuk bisa menggunakan BCA mobile, mohon aktifkan Layanan Lokasi pada menu Pengaturan perangkat Anda</string>
    <string name="a_definisi">A. DEFINISI</string>
    <string name="term_and_condition">KETENTUAN m-BCA (MOBILE BANKING) \nPT BANK CENTRAL ASIA Tbk</string>
    <string name="bca_need_your_location">BCA Mobile Membutuhkan Akses \nLokasi Anda</string>
    <string name="bottom_text_ketentuan">Ketentuan m-BCA (Mobile Banking) PT Bank Central Asia Tbk ini telah disesuaikan dengan ketentuan peraturan perundang undangan termasuk ketentuan Peraturan Otoritas Jasa Keuangan</string>
    <string name="m_bca">m-BCA</string>
    <string name="masukkan_16_angka_no_kartu_atm_anda">Masukkan 16 angka No. Kartu ATM Anda:</string>
    <string name="send_sms">Kirimkan SMS yang tampil setelah menekan tombok OK.\nTransaksi ini dikenakan biaya SMS</string>
    <string name="notice_succes_input">Setiap kali Anda masuk ke menu m-BCA, Anda memerlukan Kode Akses terdiri dari 6 karakter huruf dan angka (minimal salah satunya huruf).</string>
    <string name="silahkan_menentukan_kode_akses_anda">Silahkan menentukan Kode Akses Anda :</string>
    <string name="confirmation_code_acces">Konfirmasi ulang kode Akses Anda:</string>
    <string name="incorret_code_acces">111 - Kode Akses baru yang Anda \nmasukkan tidak sesuai</string>
    <string name="kode_akses">Kode Akses</string>
    <string name="input_6_alphanum">Input 6 alphanum</string>
    <string name="qris_navigation"></string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="m_info">m-Info</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_payment">Payment</string>
    <string name="title_commerce">Commerce</string>
    <string name="tab_transaksi">TRANSAKSI</string>
    <string name="tab_info">INFO</string>
    <string name="tab_inbox">INBOX</string>
    <string name="tab_keyboard_one"></string>
    <string name="tab_keboard_two"></string>

    <string name="catatan">"Catatan.\n"<![CDATA[<ul><li>Periode mutasi yang dapat dipilih 7 hari.</li><li>Mutasi rekening maksimum 31 hari yang lalu.</li>]]></string>
    <string name="rupiah">Rp. %s</string>
    <string name="nomor_kartu">Nomor Kartu</string>
    <string name="lihat_detail_kartu">Lihat Detail Kartu</string>
    <string name="m_transfer">m-Transfer</string>
    <string name="kode_akses_anda_salah">Kode Akses Anda Salah. Silahkan verifikasi dengan menekan tombol m-BCA atau melalui fitur Verifikasi Ulang BCA mobile pada menu About</string>
    <string name="kode_akses_salah_satu">Kode Akses Anda Salah.</string>
    <string name="kode_akses_salah_two">Silahkan masukkan Kode Akses yang benar untuk terakhir kali. Anda harus melakukan proses verifikasi jika salah memasukkan Kode Akses lagi.</string>
    <string name="kode_akses_salah_last">Kode Akses Anda Salah Ini terakhir kali.</string>
    <string name="message_block">Akun Anda Sedang di Blokir</string>
    <string name="invalid_nomor_kartu">Nomor kartu tidak terdaftar di server BCA</string>
    <string name="invalid_jumlah_nomor_kartu">Jumlah nomor kartu harus 16 angka</string>
    <string name="invalid_password">Kode Akses Anda salah.</string>
    <string name="anda_akan_logout_dari_bca_mobile">Anda akan logout dari BCA mobile</string>
    <string name="logout">Logout</string>
    <string name="qr">QR</string>
    <string name="message_qr">Transaksi dapat dilakukan setelah internet stabil</string>
    <string name="message_notif">Tidak ada pesan tersimpan</string>
    <string name="bca_keyboard">BCA Keyboard</string>
    <string name="_2_langkah_mudah_dengan_bca_keyboard">2 Langkah mudah dengan BCA Keyboard</string>
    <string name="aktifkan_bca_keyboard_dan_pilih_sebagai_keyboard_utama_di_smartphone_kamu">Aktifkan BCA Keyboard dan pilih sebagai \nkeyboard utama di smartphone kamu</string>
    <string name="mulai_bertransaksi_dengan_bca_keyboard_ndengan_klik_logo_t_t_di_keyboard_nsmartphone_kamu">Mulai bertransaksi dengan BCA Keyboard \ndengan klik logo \t \t \t\tdi keyboard \nsmartphone kamu</string>
    <string name="mulai">Mulai</string>
    <string name="bca_mobile">BCA mobile</string>
    <string name="kode_akses_saat_ini">Kode Akses Saat ini</string>
    <string name="kode_akses_yang_baru">Kode Akses yang Baru</string>
    <string name="konfirmasi_kode_akses_yang_baru">Konfirmasi Kode Akses \nyang Baru</string>
    <string name="message_null">107 - Kode Akses Harus 6 karakter \ndengan kombinasi huruf dan angka.</string>
    <string name="tempelkan_kartu_flazz_ke_area_nfc_ponsel">Tempelkan Kartu Flazz \nke area NFC ponsel</string>
    <string name="tidak_ada_pesan_yang_tersimpan">Tidak ada pesan yang tersimpan</string>
    <string name="jenisrek_s">Paspor BCA %s</string>

    <string name="gold">Paspor BCA Gold</string>
    <string name="blue">Paspor BCA Blue</string>
    <string name="platinum">Paspor BCA Platinum</string>
    <string name="semua">Semua</string>
    <string name="cari_mutasi">Cari Mutasi</string>


    <string name="periode_placeholder">%s - %s</string>
    <string name="periode_mutasi_yang_dapat_dipilih_7_hari">Periode mutasi yang dapat dipilih 7 hari.</string>
    <string name="search">Search</string>
    <string name="rekening_sendiri">Rekening Sendiri</string>
    <string name="daftar_transfer">Daftar Transfer</string>
    <string name="dari_rekening">Dari Rekening</string>
    <string name="berita">Berita:</string>
    <string name="m_transfer_2">m-Transfer :</string>
    <string name="berhasil">BERHASIL</string>
    <string name="ke">Ke %s</string>
    <string name="unnamed">DONI PRAMONO</string>
    <string name="rp">Rp. %s</string>
    <string name="pin_m_bca">PIN m-BCA:</string>

</resources>