<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_navbar_submenu">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="24dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/btnPopupTransfer"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/clicktransferpopup"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_transfer"
                app:layout_constraintStart_toEndOf="@id/btnPopupTransfer"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@drawable/textmenuselector"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="24dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/btnPopupPayment"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/clickpaymentpopup"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_payment"
                app:layout_constraintStart_toEndOf="@id/btnPopupPayment"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@drawable/textmenuselector"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/btnPopupCommerce"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/clickcommercepopup"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_commerce"
                app:layout_constraintStart_toEndOf="@id/btnPopupCommerce"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@drawable/textmenuselector"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>