<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgslash"
    tools:context=".activity.NewpinActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNewpin"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTagNewpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/opensansbold"
        android:text="@string/bca_mobile"
        android:textColor="@color/blue_text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarNewpin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbarNewpin" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarNewpin">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarNewpin2"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/navbarblack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <ImageButton
                    android:id="@+id/btnCancelNewpin"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:layout_gravity="end"
                    android:background="@drawable/clickcancellogout"/>

                <ImageButton
                    android:id="@+id/btnOkNewpin"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:background="@drawable/clickokinputselector"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bgTransfer"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:scaleType="fitStart"
            android:background="@drawable/smallcolumn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarNewpin2">

            <EditText
                android:id="@+id/inputNew1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/bgTransfer"
                app:layout_constraintEnd_toEndOf="@id/bgTransfer"
                android:maxLength="6"
                android:textSize="14sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="8dp"
                android:hint="@string/input_6_alphanum"
                android:drawableEnd="@drawable/ic_arrow"
                android:inputType="textPassword"
                android:fontFamily="@font/gontserrat_regular"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/inputNew1"
                app:layout_constraintStart_toStartOf="@id/bgTransfer"
                app:layout_constraintBottom_toBottomOf="@id/inputNew1"
                android:layout_marginStart="8dp"
                android:text="@string/kode_akses_saat_ini"
                android:fontFamily="@font/robotomedium"
                android:textColor="@color/blue_text_color"/>

            <View
                android:id="@+id/batas1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@+id/bgTransfer"
                app:layout_constraintStart_toStartOf="@+id/bgTransfer"
                app:layout_constraintTop_toBottomOf="@id/inputNew1" />

            <EditText
                android:id="@+id/inputNew2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/batas1"
                app:layout_constraintEnd_toEndOf="@id/bgTransfer"
                android:maxLength="6"
                android:textSize="14sp"
                android:hint="@string/input_6_alphanum"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/ic_arrow"
                android:inputType="textPassword"
                android:fontFamily="@font/gontserrat_regular"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/inputNew2"
                app:layout_constraintStart_toStartOf="@id/bgTransfer"
                app:layout_constraintBottom_toBottomOf="@id/inputNew2"
                android:layout_marginStart="8dp"
                android:text="@string/kode_akses_yang_baru"
                android:fontFamily="@font/robotomedium"
                android:textColor="@color/blue_text_color"/>

            <View
                android:id="@+id/batas2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="@+id/bgTransfer"
                app:layout_constraintStart_toStartOf="@+id/bgTransfer"
                app:layout_constraintTop_toBottomOf="@id/inputNew2" />

            <EditText
                android:id="@+id/inputNew3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/ic_arrow"
                android:fontFamily="@font/gontserrat_regular"
                android:hint="@string/input_6_alphanum"
                android:inputType="textPassword"
                android:maxLength="6"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/bgTransfer"
                app:layout_constraintTop_toBottomOf="@id/batas2" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/inputNew3"
                app:layout_constraintStart_toStartOf="@id/bgTransfer"
                app:layout_constraintBottom_toBottomOf="@id/inputNew3"
                android:layout_marginStart="8dp"
                android:text="@string/konfirmasi_kode_akses_yang_baru"
                android:fontFamily="@font/robotomedium"
                android:textColor="@color/blue_text_color"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
